@@ -1,3 +1,12 @@
+2014-02-10  Corinna Vinschen  <corinna@vinschen.de>
+
+	* dcrt0.cc (child_info_spawn::handle_spawn): Call fixup_lockf_after_exec
+	with additional argument to specify if the process has been execed
+	or spawned.
+	* flock.cc (fixup_lockf_after_exec): Take bool parameter to handle
+	exec and spawn differently.  In case of spawn, just give up POSIX
+	locks in favor of the still running parent.  Add comments to explain.
+
 2014-02-09  Christopher Faylor  <me.cygwin2014@cgf.cx>
 
 	* environ.cc (strbrk): Properly deal with environment variable sans
